logs/dag_id=test_dag2/run_id=manual__2025-03-31T13:43:11.877500+00:00/task_id=move_to_transformation/attempt=1.log
[2025-03-31T14:43:19.168+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: test_dag2.move_to_transformation manual__2025-03-31T13:43:11.877500+00:00 [queued]>
[2025-03-31T14:43:19.184+0100] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: test_dag2.move_to_transformation manual__2025-03-31T13:43:11.877500+00:00 [queued]>
[2025-03-31T14:43:19.184+0100] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-03-31T14:43:19.216+0100] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): move_to_transformation> on 2025-03-31 13:43:11.877500+00:00
[2025-03-31T14:43:19.225+0100] {standard_task_runner.py:60} INFO - Started process 20988 to run task
[2025-03-31T14:43:19.233+0100] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'test_dag2', 'move_to_transformation', 'manual__2025-03-31T13:43:11.877500+00:00', '--job-id', '222', '--raw', '--subdir', 'DAGS_FOLDER/test_dag2.py', '--cfg-path', '/tmp/tmpk8w9bs7w']
[2025-03-31T14:43:19.238+0100] {standard_task_runner.py:88} INFO - Job 222: Subtask move_to_transformation
[2025-03-31T14:43:19.373+0100] {task_command.py:423} INFO - Running <TaskInstance: test_dag2.move_to_transformation manual__2025-03-31T13:43:11.877500+00:00 [running]> on host LAPTOP-A4DHQTS9.
[2025-03-31T14:43:19.588+0100] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='test_dag2' AIRFLOW_CTX_TASK_ID='move_to_transformation' AIRFLOW_CTX_EXECUTION_DATE='2025-03-31T13:43:11.877500+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-31T13:43:11.877500+00:00'
[2025-03-31T14:43:19.617+0100] {base.py:83} INFO - Using connection ID 'destination_db' for task execution.
[2025-03-31T14:43:19.632+0100] {sql.py:450} INFO - Running statement: 
        SELECT column_name, data_type
        FROM information_schema.columns
        WHERE table_name = 'stg_prog3';
    , parameters: None
[2025-03-31T14:43:19.646+0100] {sql.py:459} INFO - Rows affected: 4
[2025-03-31T14:43:19.666+0100] {base.py:83} INFO - Using connection ID 'destination_db' for task execution.
[2025-03-31T14:43:19.679+0100] {sql.py:450} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS transformation.trans_prog3 ("lastupdated" timestamp without time zone, "uid" character varying, "Area (H)" text, "farmers" text);
    , parameters: None
[2025-03-31T14:43:19.702+0100] {base.py:83} INFO - Using connection ID 'destination_db' for task execution.
[2025-03-31T14:43:19.716+0100] {sql.py:450} INFO - Running statement: 
        SELECT column_name FROM information_schema.columns 
        WHERE table_schema = 'transformation' 
        AND table_name = 'trans_prog3'
        AND column_name <> 'uid';
    , parameters: None
[2025-03-31T14:43:19.726+0100] {sql.py:459} INFO - Rows affected: 3
[2025-03-31T14:43:19.746+0100] {base.py:83} INFO - Using connection ID 'destination_db' for task execution.
[2025-03-31T14:43:19.762+0100] {sql.py:450} INFO - Running statement: 
        INSERT INTO transformation.trans_prog3 (uid, lastupdated, Area (H), farmers)
        SELECT uid, lastupdated::TIMESTAMP, "Area (H)", "farmers" FROM staging.stg_prog3
        ON CONFLICT (uid) DO UPDATE 
        SET "lastupdated" = EXCLUDED."lastupdated", "Area (H)" = EXCLUDED."Area (H)", "farmers" = EXCLUDED."farmers"
        WHERE transformation.trans_prog3.lastupdated < EXCLUDED.lastupdated;
    , parameters: None
[2025-03-31T14:43:19.764+0100] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/philip/airflow/dags/test_dag2.py", line 113, in move_to_transformation
    dest_pg_hook.run(upsert_query)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/philip/de_engineering/airflow_projects/airflow1/venv/lib/python3.10/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 2: ...ransformation.trans_prog3 (uid, lastupdated, Area (H), farme...
                                                             ^

[2025-03-31T14:43:19.786+0100] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=test_dag2, task_id=move_to_transformation, execution_date=20250331T134311, start_date=20250331T134319, end_date=20250331T134319
[2025-03-31T14:43:19.805+0100] {standard_task_runner.py:107} ERROR - Failed to execute job 222 for task move_to_transformation (syntax error at or near "("
LINE 2: ...ransformation.trans_prog3 (uid, lastupdated, Area (H), farme...
                                                             ^
; 20988)
[2025-03-31T14:43:19.850+0100] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-31T14:43:19.903+0100] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
